--- a/web/assets/css/styles.css
+++ b/web/assets/css/styles.css
@@ -12,6 +12,28 @@ header {
     text-align: center;
 }
 
+.heart-container {
+    position: relative;
+    width: 100%;
+}
+
+.heart-image {
+    position: absolute;
+    top: 180px;
+    left: 10px;
+    width: 25%;
+    height: auto;
+}
+
+#heartCanvas {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 30%;
+    height: auto;
+    display: block;
+}
+
 #ecgWaveformDisplay {
     position: relative;
 }
