--- a/web/assets/css/styles.css
+++ b/web/assets/css/styles.css
@@ -12,16 +12,21 @@ header {
     text-align: center;
 }
 
+main {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    padding: 20px;
+}
+
 .heart-container {
     position: relative;
     width: 100%;
 }
 
 .heart-image {
-    position: absolute;
-    top: 180px;
-    left: 10px;
-    width: 25%;
+    position: relative;
+    width: 512px;
     height: auto;
 }
 
@@ -29,8 +34,8 @@ header {
     position: absolute;
     top: 0px;
     left: 0px;
-    width: 30%;
-    height: auto;
+    width: 512px;
+    height: 512px;
     display: block;
 }
 
