--- a/web/assets/css/styles.css
+++ b/web/assets/css/styles.css
@@ -1,55 +1,34 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f8ff;
-    margin: 0;
-    padding: 0;
+@import url('/web/assets/css/kaadu.css');
+
+@media (min-width: 1024px) {
+    #main {
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+
+    .column {
+        grid-column: span 1;
+    }
+
+    .column-2 {
+        grid-column: span 1;
+    }
 }
 
-header {
-    background-color: #4caf50;
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
+.ecg-group {
+    align-items: center;
 }
 
-main {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
-    padding: 20px;
-}
-
-.heart-container {
-    position: relative;
-    width: 100%;
-}
-
-.heart-image {
-    position: relative;
-    width: 512px;
-    height: auto;
-}
-
-#heartCanvas {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 512px;
-    height: 512px;
-    display: block;
-}
-
-#ecgWaveformDisplay {
+.ecg-container {
     position: relative;
 }
 
-#ecgWaveCanvas {
+.ecg-canvas {
     width: auto;
     height: auto;
     display: block;
 }
 
-#ecgPointer {
+.ecg-pointer {
     position: absolute;
     top: 0;
     left: 0;
@@ -57,6 +36,7 @@ main {
     height: 10px;
     border-radius: 50%;
     background: red;
+    transition: none;
 }
 
 .ecg-slider {
@@ -69,14 +49,15 @@ main {
     -webkit-appearance: none;
     background: transparent;
     outline: none;
+    margin: 0px;
 }
 
 .ecg-slider::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
     width: 15px;
-    height: 100px;
-    background: transparent;
+    height: 200px;
+    background: linear-gradient(to right, #ff000000, #ff0000, #ff000000);
     cursor: pointer;
 }
 
@@ -85,4 +66,23 @@ main {
     height: 100px;
     background: transparent;
     cursor: pointer;
+}
+
+.heart-container {
+    position: relative;
+}
+
+.heart-image {
+    position: relative;
+    width: 320px;
+    height: auto;
+}
+
+.heart-canvas {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 320px;
+    height: 320px;
+    display: block;
 }
