--- a/web/assets/css/styles.css
+++ b/web/assets/css/styles.css
@@ -1,4 +1,4 @@
-@import url('/web/assets/css/kaadu.css');
+@import url('https://shankarbus.github.io/kaadu-ui/kaadu-ui.css');
 
 @media (min-width: 1024px) {
     #main {
