--- a/web/assets/css/styles.css
+++ b/web/assets/css/styles.css
@@ -82,11 +82,14 @@
     position: absolute;
     top: 0px;
     left: 0px;
-    width: 320px;
-    height: 320px;
     display: block;
 }
 
+@media screen and (max-width: 400px) {
+    .heart-image {
+        width: 200px;
+    }
+}
 .ecg-card {
     align-items: center;
 }
