--- a/web/assets/css/styles.css
+++ b/web/assets/css/styles.css
@@ -2,7 +2,7 @@
 
 @media (min-width: 1024px) {
     #main {
-        grid-template-columns: repeat(2, minmax(0, 1fr));
+        grid-template-columns: repeat(3, minmax(0, 1fr));
     }
 
     .column {
@@ -10,12 +10,18 @@
     }
 
     .column-2 {
-        grid-column: span 1;
+        grid-column: span 2;
     }
 }
 
-.heart-group {
+.controller-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
     align-items: center;
+    width: 100%;
+    gap: 10px;
 }
 
 .slider-container {
@@ -78,6 +84,49 @@
     height: auto;
 }
 
+.electrodes-container {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+}
+
+.electrode {
+    display: none;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    align-content: center;
+    box-shadow: 0px 0px 10px 2px var(--focus-color);
+}
+
+.electrode-negative {
+    box-shadow: 0px 0px 10px 2px var(--red-color);
+}
+
+#electrode-RA {
+    background-color: yellow;
+    color: black;
+}
+
+#electrode-LA {
+    background-color: black;
+    color: white;
+}
+
+#electrode-LL {
+    background-color: green;
+    color: white;
+}
+
+.electrode-label {
+    font-size: 10px;
+    font-weight: bold;
+    text-align: center;
+}
+
 .heart-canvas {
     position: absolute;
     top: 0px;
@@ -90,6 +139,22 @@
         width: 200px;
     }
 }
+
+.heart-pointer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: radial-gradient(circle, #1e90ff 20%, #1e90ff00 60%);
+    transition: none;
+}
+
+.label-cell {
+    max-width: unset;
+}
+
 .ecg-card {
     align-items: center;
 }
